# chatterbox-experimental

./: .env  README.md  docker-compose.yml  go.work
broker/: Makefile  go.mod  go.sum  logger.go  main.go
broker/log/: logger.go
broker/logger/: logger.go
broker/queueHandler/: handler.config.go
broker/tools/: logger.go
client/: .metadata  pubspec.yaml
client/lib/: main.dart
client/test/: widget_test.dart
data/database.db/: IDENTITY  LOG  LOG.old.1683348392620064  LOG.old.1683348393576788  LOG.old.1683348394533965  LOG.old.1683348395454982  LOG.old.1683348396585262  LOG.old.1683348398633823  LOG.old.1683348402204471
docs/: SPEC.md
go-grpc/: Makefile  go.grpc  go.mod  go.sum  main.go
go-grpc/logger/: logger.go
go-grpc/protobuf/: login.pb.go  login.proto  message.proto
go-grpc/protos/: login_grpc.pb.go
go-grpc/service/: login.go
go-grpc/tools/: logger.go
go-oauth/: go.mod  go.sum  main.go
go-oauth/logger/: logger.go
go-redis/: Makefile  go.mod
go-redis/logger/: logger.go
go-surrealdb/: Makefile  go.mod  go.sum  main.go
go-surrealdb/logger/: logger.go
go-surrealdb/tools/: logger.go
rust-grpc/: Cargo.toml  Makefile
rust-grpc/proto/: test.proto
rust-grpc/src/: main.rs
rust-surrealdb/: Cargo.toml
rust-surrealdb/src/: .env  main.rs
rust-surrealdb/src/db/: auth.rs
