[package]
name = "rust-surrealdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surrealdb = "1.0.0-beta.9"
anyhow = "1.0"
tonic = "0.9.2"
prost = "0.11"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"]}
reqwest = "0.11.17"
serde = { version = "1.0.162" features = ["derive"] } 
serde_json = "1.0.96"


[build-dependencies]
tonic-build = "0.9"