[package]
name = "rust-surrealdb"
version = "0.1.0"
edition = "2021"




[dependencies]
surrealdb = "1.0.0-beta.9"
anyhow = "1.0"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"]}
reqwest = "0.11.17"
serde = { version = "1.0.162" features = ["derive"] } 
serde_json = "1.0.96"





